--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
+/* Fonts */
+
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+
+/* Padding and margin reset */
 
 * {
   box-sizing: border-box;
@@ -7,15 +11,17 @@
   font-family: 'Roboto', sans-serif;
 }
 
+/* Remove link styling */
+
 a {
   text-decoration: none;
 }
 
+/* Normal text styling */
+
 p {
   color: #777;
   line-height: 1.5rem;
-  margin: 1rem;
-  padding: 1rem;
 }
 
 /* Utility */
@@ -36,19 +42,16 @@ p {
 .l-heading {
   font-size: 3rem;
   color: #777;
-  margin: 1rem 0;
 }
 
 .m-heading {
   font-size: 2rem;
   color: #777;
-  margin: 1rem 0;
 }
 
 .s-heading {
   font-size: 1.25rem;
   color: #777;
-  margin: 1rem 0;
 }
 
 .l-text {
@@ -88,17 +91,17 @@ p {
   margin: 3rem;
 }
 
-.primary-button {
+.primary-btn {
   background: #ff6685;
   border-radius: 5px;
-  margin: 1rem;
   padding: 1rem;
+  margin: 1rem;
   color: #fff !important;
   max-width: 10rem;
   border: none !important;
 }
 
-.primary-button:hover {
+.primary-btn:hover {
   cursor: pointer;
   background: #ff7685
 }
@@ -115,7 +118,7 @@ p {
   height: 100%;
 }
 
-.h-block-flexcontainer {
+.flex-container {
   display: flex;
   align-items: center;
   height: 100vh;
@@ -144,8 +147,6 @@ p {
   align-items: center;
 
   background: #fff;
-
-  margin: 0rem 1rem 1rem 1rem !important;
 
   position: sticky;
   z-index: 1;
@@ -262,23 +263,21 @@ p {
   color: #777;
 }
 
+#main-footer div {
+  text-align: center;
+}
+
   /* Checkbox */
 /* The container */
 .container {
-  display: block;
   position: relative;
   padding-left: 2rem;
-  margin-bottom: 2rem;
   cursor: pointer;
-  font-size: 1rem;
 }
 
 /* Hide the browser's default checkbox */
 .container input {
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
+  display: none;
 }
 
 /* Create a custom checkbox */
