--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,4 +1,4 @@
-.primary-button {
+.primary-btn {
   font-size: 0.75rem;
   padding: 0.75rem;
   font-size: 1rem;
